Fixes for polish tooltips. Easier way of jumping to specific part of video.

--- a/platform/public/dm-modules/dm-wavesurfer/dm-wavesurfer.less
+++ b/platform/public/dm-modules/dm-wavesurfer/dm-wavesurfer.less
@@ -4,6 +4,7 @@
     width: 100%;
     height: 25px;
     left: 0;
+    z-index: 10;
 }
 
 .dm-wavesurfer-range {
